# SoroDynamics-Research

./: .gitignore  LICENSE  README.md
backend/src/services/: stellar-monitor.ts
contracts/src/: lib.rs
frontend/: next.config.mjs  package-lock.json  tailwind.config.ts
frontend/src/app/: page.tsx
frontend/src/components/: AnalyticsLedger.tsx  SimulationTrigger.tsx
soroban-dynamics-hub/: README.md
soroban-dynamics-hub/backend/: .env.example  package-lock.json  package.json
soroban-dynamics-hub/backend/src/: index.ts
soroban-dynamics-hub/backend/src/routes/: arbitrage.ts
soroban-dynamics-hub/backend/src/services/: stellar-monitor.ts
soroban-dynamics-hub/contracts/: Cargo.toml
soroban-dynamics-hub/contracts/src/: lib.rs
soroban-dynamics-hub/frontend/: package.json
soroban-dynamics-hub/frontend/src/app/: layout.tsx
soroban-dynamics-hub/frontend/src/components/: StatePanel.tsx
